# gip_optimal_navigation

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~  terminal_initial_commands.py  terminal_moving.txt  terminal_moving.txt~
maps/: demo_map_original.pgm  demo_map_original.yaml
msg/: arrayMessage.msg~  obstacleMsg.msg  obstacleMsg.msg~  obstacleMsg_vector.msg  obstacleMsg_vector.msg~
src/: listener_realTime.py  model_push.cc
worlds/: basic_sim.world  model_push.world
